--- a/templates/core/events.html
+++ b/templates/core/events.html
@@ -12,7 +12,7 @@
             </span>
         </h1>
         <p class="font-bold text-2xl md:text-3xl uppercase max-w-2xl mx-auto leading-tight bg-white border-4 border-roots-black p-4 shadow-[8px_8px_0px_0px_#1a1a1a] transform rotate-1">
-            Where we make the noise. <br> Where we shake the tree.
+            Join us kwa ground. <br> As we spread the Roots Gospel.
         </p>
         
         <!-- Decoration -->
