--- a/templates/core/home.html
+++ b/templates/core/home.html
@@ -42,7 +42,7 @@
                             </svg>
                         </div>
                         <p class="leading-relaxed">
-                            "We are are like-minded, we are intelligent, we are different. We believe in the power of value addition as a necessarity means that will take Kenya out of it's current depression."
+                            "We are like-minded, we are intelligent, we are different. We believe in the power of value addition as a necessary means that will take Kenya out of its current depression."
                         </p>
                     </div>
                 </div>
@@ -91,7 +91,7 @@
     <!-- Video Section -->
     <section class="mt-8 border-4 border-roots-black p-4 shadow-[8px_8px_0px_0px_rgba(26,26,26,1)] bg-white">
         <h2 class="text-3xl font-black uppercase mb-6 border-b-4 border-roots-black inline-block">
-            {% if video %}{{ video.title }}{% else %}Watch The Message{% endif %}
+            Watch The Message
         </h2>
         
         <div class="grid md:grid-cols-2 gap-8 items-center">
